<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_160"
    android:paddingTop="@dimen/dp_10"
    android:background="@color/c_ffffff"
    android:layout_marginTop="@dimen/dp_20"
    >
    <ImageView
        android:layout_marginLeft="@dimen/dp_20"
        android:id="@+id/img_order"
        android:textSize="@dimen/sp_16"
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"
        android:src="@mipmap/icon_form_select"
        />
    <TextView
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/my_order"
        android:layout_below="@id/img_order"
        android:layout_marginLeft="@dimen/dp_12"
        android:id="@+id/tv_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <ImageView
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_toRightOf="@id/img_order"
        android:id="@+id/img_nopay"
        android:textSize="@dimen/sp_16"
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"
        android:src="@mipmap/icon_nopay_select"
        />
    <TextView
        android:layout_marginTop="@dimen/dp_10"
        android:layout_toRightOf="@id/tv_order"
        android:layout_marginLeft="@dimen/dp_15"
        android:text="@string/stay_pay"
        android:layout_below="@id/img_nopay"
        android:id="@+id/tv_nopay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <ImageView
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_toRightOf="@id/img_nopay"
        android:id="@+id/img_stay_take"
        android:textSize="@dimen/sp_16"
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"
        android:src="@mipmap/icon_nopay_select"
        />
    <TextView
        android:layout_marginTop="@dimen/dp_10"
        android:layout_toRightOf="@id/tv_nopay"
        android:layout_marginLeft="@dimen/dp_30"
        android:text="@string/stay_take"
        android:layout_below="@id/img_stay_take"
        android:id="@+id/tv_stay_take"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <ImageView
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_toRightOf="@id/img_stay_take"
        android:id="@+id/img_stay_appraise"
        android:textSize="@dimen/sp_16"
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"
        android:src="@mipmap/icon_nopay_select"
        />
    <TextView
        android:layout_marginTop="@dimen/dp_10"
        android:layout_toRightOf="@id/tv_stay_take"
        android:layout_marginLeft="@dimen/dp_28"
        android:text="@string/stay_appraise"
        android:layout_below="@id/img_stay_take"
        android:id="@+id/tv_stay_appraise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <ImageView
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_toRightOf="@id/img_stay_appraise"
        android:id="@+id/img_customer_service"
        android:textSize="@dimen/sp_16"
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"
        android:src="@mipmap/icon_nopay_select"
        />

    <TextView
        android:id="@+id/tv_customer_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_stay_take"
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_toRightOf="@id/tv_stay_appraise"
        android:text="@string/customer_service" />
    <View
        android:id="@+id/line_mine"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_below="@id/tv_order"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_2"
        android:background="@color/c_d9d9d9"
        />
    <ImageView
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_18"
        android:layout_below="@id/line_mine"
        android:background="@mipmap/icon_xin_select"
        android:id="@+id/img_collection"
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_40"
        />
    <TextView
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginLeft="@dimen/dp_11"
        android:layout_below="@id/img_collection"
        android:text="@string/my_collection"
        android:id="@+id/tv_collection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:text="100"
        android:textSize="@dimen/sp_14"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dp_13"
        android:layout_below="@id/line_mine"
        android:layout_marginLeft="@dimen/dp_65"
        android:layout_toRightOf="@id/img_collection"
        android:id="@+id/tv_commodity_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:layout_alignLeft="@id/tv_commodity_num"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_below="@id/tv_commodity_num"
        android:id="@+id/tv_commodity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/commodity"
        />
    <TextView
        android:text="100"
        android:textSize="@dimen/sp_14"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dp_13"
        android:layout_below="@id/line_mine"
        android:layout_marginLeft="@dimen/dp_65"
        android:layout_toRightOf="@id/tv_commodity_num"
        android:id="@+id/tv_special_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:layout_alignLeft="@id/tv_special_num"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_below="@id/tv_commodity_num"
        android:id="@+id/tv_special"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/specia"
        />
    <TextView
        android:text="100"
        android:textSize="@dimen/sp_14"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dp_13"
        android:layout_below="@id/line_mine"
        android:layout_marginLeft="@dimen/dp_65"
        android:layout_toRightOf="@id/tv_special_num"
        android:id="@+id/tv_subject_topic_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:layout_alignLeft="@id/tv_subject_topic_num"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_below="@id/tv_commodity_num"
        android:id="@+id/tv_subject_topic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topic"
        />
</RelativeLayout>
