<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.baidu.ui.main.MainActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:background="@color/c_ecebeb"
        android:gravity="center"
        >
        <TextView
            android:layout_marginLeft="@dimen/dp_90"
            android:textSize="@dimen/sp_20"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Mall"
            />
    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:id="@+id/fl"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/c_ecebeb"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_30"
        android:paddingRight="@dimen/dp_30"
        android:paddingTop="@dimen/dp_15"
        >
        <ImageView
            android:id="@+id/img_home"
            android:layout_width="@dimen/dp_22"
            android:layout_height="@dimen/dp_22"
            android:background="@drawable/icon_tab_home_select"
            />
        <TextView
            android:textSize="@dimen/sp_12"
            android:id="@+id/tv_home"
            android:layout_below="@id/img_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            />

        <ImageView
            android:id="@+id/img_classify"
            android:layout_width="@dimen/dp_22"
            android:layout_height="@dimen/dp_22"
            android:layout_marginLeft="@dimen/dp_65"
            android:layout_toRightOf="@id/img_home"
            android:background="@drawable/icon_tab_classify_unselect" />
        <TextView
            android:textSize="@dimen/sp_12"
            android:layout_alignLeft="@id/img_classify"
            android:id="@+id/tv_classify"
            android:layout_below="@id/img_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/classify"
            />

        <ImageView
            android:id="@+id/img_specia"
            android:layout_width="@dimen/dp_22"
            android:layout_height="@dimen/dp_22"
            android:layout_marginLeft="@dimen/dp_65"
            android:layout_toRightOf="@id/img_classify"
            android:background="@drawable/icon_tab_special_unselect" />
        <TextView
            android:textSize="@dimen/sp_12"
            android:layout_alignLeft="@id/img_specia"
            android:id="@+id/tv_specia"
            android:layout_below="@id/img_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/specia"
            />
        <ImageView
            android:layout_toRightOf="@id/img_specia"
            android:layout_marginLeft="@dimen/dp_65"
            android:id="@+id/img_mine"
            android:layout_width="@dimen/dp_22"
            android:layout_height="@dimen/dp_22"
            android:background="@drawable/icon_tab_my_unselect"
            />

        <TextView
            android:id="@+id/tv_mine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_mine"
            android:layout_alignLeft="@id/img_mine"
            android:layout_marginTop="0dp"
            android:text="@string/mine"
            android:textSize="@dimen/sp_12" />
    </RelativeLayout>
</LinearLayout>