<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_60"
    android:paddingTop="@dimen/dp_10"
    android:background="@color/c_ffffff"
    >
    <TextView
        android:layout_marginLeft="@dimen/dp_60"
        android:id="@+id/tv_integrate"
        android:textSize="@dimen/sp_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/integrate"
        />
    <TextView
        android:layout_marginLeft="@dimen/dp_55"
        android:textColor="@color/c_5ed1bc"
        android:text="10333"
        android:layout_below="@id/tv_integrate"
        android:id="@+id/tv_integrate_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:layout_marginLeft="@dimen/dp_60"
        android:layout_toRightOf="@id/tv_integrate"
        android:id="@+id/tv_coupon"
        android:textSize="@dimen/sp_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coupon"
        />
    <TextView
        android:layout_toRightOf="@id/tv_integrate"
        android:textColor="@color/c_5ed1bc"
        android:layout_marginLeft="@dimen/dp_62"
        android:text="10333"
        android:layout_below="@id/tv_coupon"
        android:id="@+id/tv_coupon_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:layout_marginLeft="@dimen/dp_60"
        android:layout_toRightOf="@id/tv_coupon"
        android:id="@+id/tv_follow"
        android:textSize="@dimen/sp_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/follow"
        />
    <TextView
        android:layout_marginLeft="@dimen/dp_56"
        android:textColor="@color/c_5ed1bc"
        android:text="10333"
        android:layout_below="@id/tv_follow"
        android:id="@+id/tv_follow_num"
        android:layout_toRightOf="@id/tv_coupon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
</RelativeLayout>
